--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body, html, p, h1, h2, h3, h4 {
+  margin: 0;
+  padding: 0;
+}
+
+
