--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,36 +1,67 @@
+@import "../styles";
+
 .wrapper {
-  display: grid;
-  grid-gap: 50px;
-  grid-template-rows: 1fr 1fr 1fr;
-  justify-items: center;
-  padding: 55px 0;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
-  height: 2500px;
-  background-color: #212121;
-  margin: 0;
+  height: 100%;
+
+  &__nav {
+    margin: 40px auto;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    gap: 0 50px;
+
+    &__link {
+      &__item {
+        font-weight: 700;
+        text-decoration: none;
+        font-size: 40px;
+        color: transparent;
+        cursor: pointer;
+        font-family: 'Roboto', sans-serif;
+        text-shadow: 2px 2px 0 rgba(255,255,255,0.1);
+        transition: 0.2s ease;
+
+      }
+      & .active {
+        color: #ffffff;
+        text-shadow: 0 0 2px rgba(255,255,255, 1);
+      }
+    }
+  }
 }
 
-.btn {
-  cursor: pointer;
-  border: none;
-  background-color: #212121;
-  outline: 0;
-  font-size: 200px;
-  margin: auto 35px;
-  width: 100px;
-  height: 80%;
-  border-radius: 25px;
-  text-shadow: 0 0 5px #fff;
-  transition: ease-out 150ms;
-
-  &:hover {
+.btn__wrapper {
+  margin: auto 10px;
+  height: 700px;
+  .btn {
+    position: relative;
+    z-index: 10;
+    cursor: pointer;
+    border: none;
+    background-color: #212121;
+    outline: 0;
+    font-size: 200px;
+    width: 100px;
+    height: 100%;
+    border-radius: 25px;
     text-shadow: 0 0 5px #fff;
-    box-shadow: inset 0 0 5px rgba(101, 114, 126, 50), 0 0 25px rgba(140, 150, 170, 50)
+    transition: ease-out 150ms;
+
+    &:hover {
+      text-shadow: 0 0 5px #fff;
+      box-shadow: inset 0 0 5px rgba(101, 114, 126, 50), 0 0 25px rgba(140, 150, 170, 50)
+    }
+
+    &:active {
+      color: rgb(255, 255, 255);
+      text-shadow: 0 0 7px #fff;
+      box-shadow: inset 0 0 5px rgba(101, 114, 126, 50), 0 0 5px rgba(140, 150, 170, 50)
+    }
   }
 
-  &:active {
-    color: rgb(255, 255, 255);
-    text-shadow: 0 0 7px #fff;
-    box-shadow: inset 0 0 5px rgba(101, 114, 126, 50), 0 0 5px rgba(140, 150, 170, 50)
-  }
 }
