--- a/src/app/components/cards/cards.component.scss
+++ b/src/app/components/cards/cards.component.scss
@@ -1,13 +1,15 @@
 @import "../../app.component";
 
 .cards-wrapper {
-  width: 1800px;
-  height: 900px;
+  max-width: 1800px;
+  max-height: 900px;
   display: flex;
-  padding: 20px;
+  padding: 0 20px;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   user-select: none;
+  margin: 0 auto;
 }
 
 .cards {
@@ -17,4 +19,8 @@
   &:active {
     cursor: grabbing;
   }
+}
+
+.cards__hidden {
+  display: none;
 }
