--- a/src/app/components/quotes/quote/quote.component.scss
+++ b/src/app/components/quotes/quote/quote.component.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;600&display=swap');
 
 .quote {
-  width: 500px;
-  height: 160px;
+  max-width: 500px;
+  min-height: 160px;
   padding: 15px;
   margin: 30px 0;
   background-color: rgb(250, 250, 250);
@@ -15,7 +15,7 @@
 
 .quote-text {
   display: flex;
-  height: 100px;
+  min-height: 100px;
   font-weight: 700;
   font-size: 24px;
 }
