--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,13 @@
-body, html, p, h1, h2, h3, h4 {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,100&display=swap');
+
+
+* {
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: #212121;
 }
 
 
